2004-10-26 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow conditionals in gpal subprogram declaration region.

2004-10-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow complex alias expresions in gpal.
  * Allow pragmas in gpal subprograms.
  * Add second pass to gpal optimizer.

2004-10-21 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Reduced number of gpal banksels.

2004-10-19 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed bug in new linker script option.
  * Use autoconf PACKAGE_BUGREPORT macro.
  * Improvements in gpal's 18xx code generator.

2004-10-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added absolute path option on win32 hosts.
  * Allow the linker script to be specified on as first item of the object
    list in gplink.

2004-10-15 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Delete gplink output files when errors occur.
  * Use more boolean types.
  * Clean up top level of gplink.
  * Added French translation of gputils man pages.

2004-10-10 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Merged changes from cod-branch:
    - Fixed stop location error in directory map of COD files.
    - Added time and date to COD files.
    - Fixed error in gpvc time reporting.
    - Changed to byte addressing for 18xx cod files.
  * Added direct messaging from COFF and COD files to simulator.
  * Added new COFF directives .ident and .type.
  * Allow expressions as arguments to banksel, bankisel, and pagesel.
  * Improved rpm spec file.

2004-10-02 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed error in disassembly of 18xx instuctions.

2004-09-26 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added directives to gpasm for directly modifying COFF symbol tables.
  * Changed the gpasm COFF debug directives to .file, .eof, and .line.  

2004-09-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.12.4 Released.